ajustando classes de segurança e infra